# mimic3-benchmarks

./: .gitignore  README.md  pyproject.toml  requirements.txt
mimic3benchmark/: ihm_prediction.json
mimic3benchmark/evaluation/: README.md
mimic3benchmark/mimic3models/in_hospital_mortality/logistic/predictions/: all.all.l2.C0.001.csv
mimic3benchmark/mimic3models/in_hospital_mortality/logistic/results/: test_all.all.l2.C0.001.json  train_all.all.l2.C0.001.json  val_all.all.l2.C0.001.json
mimic3benchmark/scripts/: extract_episodes_from_subjects.py  extract_subjects.py
mimic3models/: common_utils.py  keras_utils.py  pretrained_models.md
mimic3models/decompensation/: main.py  utils.py
mimic3models/decompensation/logistic/: main.py
mimic3models/in_hospital_mortality/: main.py
mimic3models/in_hospital_mortality/logistic/: main.py
mimic3models/keras_models/: channel_wise_lstms.py  lstm.py  multitask_lstm.py
mimic3models/length_of_stay/: main.py
mimic3models/length_of_stay/logistic/: main.py  main_cf.py
mimic3models/multitask/: main.py
mimic3models/phenotyping/: main.py
mimic3models/phenotyping/logistic/: main.py
