[tool.poetry]
name = "mimic3-benchmarks"
version = "0.1.0"
description = "Repository containing benchmark tasks for the MIMIC-III dataset."
authors = ["harrisonwilde <h.wilde@ucl.ac.uk>", "yabdulle <yusuf.abdulle.20@ucl.ac.uk>", "evakeller <eva.keller.22@ucl.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
keras = "^3.6.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
pyyaml = "^6.0.2"
tqdm = "^4.67.0"
tensorflow = "^2.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
